@@ -1,5 +1,7 @@
 Version 4.45 - 17 March 2013, by Per Øyvind Karlsen
 
+- add an alias to Pkg_files to only list doc files. This avoids pushing more 
+  than 50k strings on the stack to check if texmf has a README.urpmi
 - implement use of new start & stop callbacks in rpm
 - fix calling method in string
   (spotted by perl_checker, introduced in revision mga#267800 ("honour search
